--- a/serverless.yml
+++ b/serverless.yml
@@ -5,6 +5,18 @@ provider:
   runtime: python3.9
   environment:
     DYNAMODB_TABLE: ${self:service}-table
+  iam:
+    role:
+      statements:
+        - Effect: Allow
+          Action:
+            - dynamodb:Query
+            - dynamodb:Scan
+            - dynamodb:GetItem
+            - dynamodb:PutItem
+            - dynamodb:UpdateItem
+            - dynamodb:DeleteItem
+          Resource: "arn:aws:dynamodb:${aws:region}:*:table/${self:provider.environment.DYNAMODB_TABLE}"
 
 functions:
   createTodo:
